fix: Separate CLI functions from the core package, fix module declarations and build scripts
Signed-off-by: Vu Tuan Long <225042007+vutuanlong07@users.noreply.github.com>